--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,8 +1,8 @@
 server {
     listen 80;
-    server_name customerManage;
+    server_name customer_manage_system_sample;
 
-    root /var/www/customerManage/public;
+    root /var/www/customer_manage_system_sample/public;
     index index.html index.php index.htm;
 
     location / {
