--- a/src/customer_manage_system_sample/package.json
+++ b/src/customer_manage_system_sample/package.json
@@ -1,18 +1,33 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
+        "dev": "yarn run development",
         "development": "mix",
         "watch": "mix watch",
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
-        "prod": "npm run production",
-        "production": "mix --production"
+        "prod": "yarn run production",
+        "production": "mix --production",
+        "postinstall": "yarn run prod"
     },
     "devDependencies": {
+        "@mdi/font": "^5.9.55",
         "axios": "^0.21",
-        "laravel-mix": "^6.0.6",
-        "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "cross-env": "^7.0",
+        "deepmerge": "^4.2.2",
+        "laravel-mix": "^6.0.19",
+        "lodash": "^4.17.21",
+        "postcss": "^8.2.15",
+        "postcss-loader": "^5.3.0",
+        "resolve-url-loader": "^4.0.0",
+        "sass": "~1.32",
+        "sass-loader": "^12.1.0",
+        "vue": "^2.6.12",
+        "vue-loader": "^15.9.5",
+        "vue-router": "^3.5.1",
+        "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "vuetify": "^2.5.8"
     }
 }
