--- a/src/customer_manage_system_sample/package.json
+++ b/src/customer_manage_system_sample/package.json
@@ -28,6 +28,7 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "vuedraggable": "^2.24.3",
         "vuetify": "^2.5.8"
     }
 }
